--- a/index.html
+++ b/index.html
@@ -1,38 +1,30 @@
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-   
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Work Day Scheduler</title>
-  </head>
 
-  <body>
-    <header class="p-5 mb-4">
-      <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
-    </header>
-    <div class="container-fluid px-5">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap" rel="stylesheet" />
+
+  <link rel="stylesheet" href="./assets/css/style.css">
+  <title>Work Day Scheduler</title>
+</head>
+
+<body>
+  <div class="jumbotron jumbotron-fluid head">
+    <h1 class="display-4 text-center">Work Day Planner</h1>
+    <p class="lead text-center">A simple calendar app for scheduling your work day</p>
+    <button class="btn btn-warning" style="margin-bottom:1em" id="clearBtn">Clear</button>
+    <p>April 4, 2023</p>
+    <p>12:06:42AM</p>
+  </div>
+
+  
       <!-- Use class for "past", "present", and "future" to apply styles to the
         time-block divs accordingly. The javascript will need to do this by
         adding/removing these classes on each div by comparing the hour in the
@@ -69,51 +61,35 @@
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
-    </div>
+      </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
-    integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
-    crossorigin="anonymous"></script>
 
-    <script src="./assets/js/script.js"></script>
-   
-    <!-- checked the console to see correct local date and time -->
-    <script>
-      let d;
-      d = new Date();
-      
-      console.log(d.toString());
-      console.log(d.getFullYear());
-      console.log(d.getMonth());
-      console.log(d.getDate());
-      console.log(d.getMinutes());
-      console.log(d.getSeconds());
-      console.log(d.getTime());
-      console.log(d.getTimezoneOffset());
-      console.log(d.getDate());
-      console.log(d.toISOString());
-      console.log(d.toLocaleString("en-US"));
-      console.log(JSON.stringify({
-        myDate: d
-      }));
-    </script>
-  </body>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
+        integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
+
+      <script src="./assets/js/script.js"></script>
+
+      <!-- checked the console to see correct local date and time -->
+      <script>
+        let d;
+        d = new Date();
+
+        console.log(d.toString());
+        console.log(d.getFullYear());
+        console.log(d.getMonth());
+        console.log(d.getDate());
+        console.log(d.getMinutes());
+        console.log(d.getSeconds());
+        console.log(d.getTime());
+        console.log(d.getTimezoneOffset());
+        console.log(d.getDate());
+        console.log(d.toISOString());
+        console.log(d.toLocaleString("en-US"));
+        console.log(JSON.stringify({
+          myDate: d
+        }));
+      </script>
+</body>
+
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
