--- a/index.html
+++ b/index.html
@@ -20,12 +20,98 @@
     <h1 class="display-4 text-center">Work Day Planner</h1>
     <p class="lead text-center">A simple calendar app for scheduling your work day</p>
     <button class="btn btn-warning" style="margin-bottom:1em" id="clearBtn">Clear</button>
-    <p>April 4, 2023</p>
-    <p>12:06:42AM</p>
+    <p class="date">April 4, 2023</p>
+    <p class="time">12:06:42 AM</p>
   </div>
 
-  
-      <!-- Use class for "past", "present", and "future" to apply styles to the
+
+  <div class="container main">
+
+    <div class="row time-block">
+      <div class="hour col-xs-2 col-sm-2 col-md-2 col-lg-2">
+        9am
+      </div>
+      <textarea class="col-xs-9 col-sm-9 col-md-9 col-lg-9 description past" data-hour="9" id="div9"></textarea>
+      <button class="col-xs-1 col-sm-1 col-md-1 col-lg-1 fas fa-save btn-block saveBtn" id="btn9"></button>
+    </div>
+    <div class="row time-block">
+      <div class="hour col-xs-2 col-sm-2 col-md-2 col-lg-2">
+        10am
+      </div>
+      <textarea class="col-xs-9 col-sm-9 col-md-9 col-lg-9 description past" data-hour="10" id="div10"></textarea>
+      <button class="col-xs-1 col-sm-1 col-md-1 col-lg-1 fas fa-save btn-block saveBtn" id="btn10"></button>
+
+    </div>
+    <div class="row time-block">
+      <div class="hour col-xs-2 col-sm-2 col-md-2 col-lg-2">
+        11am
+      </div>
+      <textarea class="col-xs-9 col-sm-9 col-md-9 col-lg-9 description past" data-hour="11" id="div11"></textarea>
+      <button class="col-xs-1 col-sm-1 col-md-1 col-lg-1 fas fa-save btn-block saveBtn" id="btn11"></button>
+
+    </div>
+    <div class="row time-block">
+      <div class="hour col-xs-2 col-sm-2 col-md-2 col-lg-2">
+        12am
+      </div>
+      <textarea class="col-xs-9 col-sm-9 col-md-9 col-lg-9 description past" data-hour="12" id="div12"></textarea>
+      <button class="col-xs-1 col-sm-1 col-md-1 col-lg-1 fas fa-save btn-block saveBtn" id="btn12"></button>
+
+    </div>
+    <div class="row time-block">
+      <div class="hour col-xs-2 col-sm-2 col-md-2 col-lg-2">
+        1pm
+      </div>
+      <textarea class="col-xs-9 col-sm-9 col-md-9 col-lg-9 description past" data-hour="13" id="div1"></textarea>
+      <button class="col-xs-1 col-sm-1 col-md-1 col-lg-1 fas fa-save btn-block saveBtn" id="btn1"></button>
+
+    </div>
+    <div class="row time-block">
+      <div class="hour col-xs-2 col-sm-2 col-md-2 col-lg-2">
+        2pm
+      </div>
+      <textarea class="col-xs-9 col-sm-9 col-md-9 col-lg-9 description past" data-hour="14" id="div2"></textarea>
+      <button class="col-xs-1 col-sm-1 col-md-1 col-lg-1 fas fa-save btn-block saveBtn" id="btn2"></button>
+
+    </div>
+    <div class="row time-block">
+      <div class="hour col-xs-2 col-sm-2 col-md-2 col-lg-2">
+        3pm
+      </div>
+      <textarea class="col-xs-9 col-sm-9 col-md-9 col-lg-9 description past" data-hour="15" id="div3"></textarea>
+      <button class="col-xs-1 col-sm-1 col-md-1 col-lg-1 fas fa-save btn-block saveBtn" id="btn3"></button>
+
+    </div>
+    <div class="row time-block">
+      <div class="hour col-xs-2 col-sm-2 col-md-2 col-lg-2">
+        4pm
+      </div>
+      <textarea class="col-xs-9 col-sm-9 col-md-9 col-lg-9 description past" data-hour="16" id="div4"></textarea>
+      <button class="col-xs-1 col-sm-1 col-md-1 col-lg-1 fas fa-save btn-block saveBtn" id="btn4"></button>
+
+    </div>
+    <div class="row time-block">
+      <div class="hour col-xs-2 col-sm-2 col-md-2 col-lg-2">
+        5pm
+      </div>
+      <textarea class="col-xs-9 col-sm-9 col-md-9 col-lg-9 description past" data-hour="17" id="div5"></textarea>
+      <button class="col-xs-1 col-sm-1 col-md-1 col-lg-1 fas fa-save btn-block saveBtn" id="btn5"></button>
+
+      <div>
+        <div class="row time-block">
+          <div class="hour col-xs-2 col-sm-2 col-md-2 col-lg-2">
+            6pm
+          </div>
+          <textarea class="col-xs-9 col-sm-9 col-md-9 col-lg-9 description past" data-hour="18" id="div6"></textarea>
+          <button class="col-xs-1 col-sm-1 col-md-1 col-lg-1 fas fa-save btn-block saveBtn" id="btn6"></button>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+
+  <!-- <!-- Use class for "past", "present", and "future" to apply styles to the
         time-block divs accordingly. The javascript will need to do this by
         adding/removing these classes on each div by comparing the hour in the
         id to the current hour. The html provided below is meant to be an example
@@ -35,61 +121,61 @@
         code is implemented.
         -->
 
-      <!-- Example of a past time block. The "past" class adds a gray background color. -->
-      <div id="hour-9" class="row time-block past">
-        <div class="col-2 col-md-1 hour text-center py-3">9AM</div>
-        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
-          <i class="fas fa-save" aria-hidden="true"></i>
-        </button>
-      </div>
+  <!-- Example of a past time block. The "past" class adds a gray background color. -->
+  <!-- <div id="hour-9" class="row time-block past">
+    <div class="col-2 col-md-1 hour text-center py-3">9AM</div>
+    <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+    <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+      <i class="fas fa-save" aria-hidden="true"></i>
+    </button>
+  </div>
 
-      <!-- Example of a present time block. The "present" class adds a red background color. -->
-      <div id="hour-10" class="row time-block present">
-        <div class="col-2 col-md-1 hour text-center py-3">10AM</div>
-        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
-          <i class="fas fa-save" aria-hidden="true"></i>
-        </button>
-      </div>
+  Example of a present time block. The "present" class adds a red background color.
+  <div id="hour-10" class="row time-block present">
+    <div class="col-2 col-md-1 hour text-center py-3">10AM</div>
+    <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+    <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+      <i class="fas fa-save" aria-hidden="true"></i>
+    </button>
+  </div>
+<!-- 
+  Example of a future time block. The "future" class adds a green background color. -->
+  <!-- <div id="hour-11" class="row time-block future">
+    <div class="col-2 col-md-1 hour text-center py-3">11AM</div>
+    <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+    <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+      <i class="fas fa-save" aria-hidden="true"></i>
+    </button>
+  </div>
+  </div> --> --> -->
 
-      <!-- Example of a future time block. The "future" class adds a green background color. -->
-      <div id="hour-11" class="row time-block future">
-        <div class="col-2 col-md-1 hour text-center py-3">11AM</div>
-        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
-          <i class="fas fa-save" aria-hidden="true"></i>
-        </button>
-      </div>
-      </div>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
+    integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
 
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-      <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
-        integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
+  <script src="./assets/js/script.js"></script>
 
-      <script src="./assets/js/script.js"></script>
+  <!-- checked the console to see correct local date and time -->
+  <script>
+    let d;
+    d = new Date();
 
-      <!-- checked the console to see correct local date and time -->
-      <script>
-        let d;
-        d = new Date();
-
-        console.log(d.toString());
-        console.log(d.getFullYear());
-        console.log(d.getMonth());
-        console.log(d.getDate());
-        console.log(d.getMinutes());
-        console.log(d.getSeconds());
-        console.log(d.getTime());
-        console.log(d.getTimezoneOffset());
-        console.log(d.getDate());
-        console.log(d.toISOString());
-        console.log(d.toLocaleString("en-US"));
-        console.log(JSON.stringify({
-          myDate: d
-        }));
-      </script>
+    console.log(d.toString());
+    console.log(d.getFullYear());
+    console.log(d.getMonth());
+    console.log(d.getDate());
+    console.log(d.getMinutes());
+    console.log(d.getSeconds());
+    console.log(d.getTime());
+    console.log(d.getTimezoneOffset());
+    console.log(d.getDate());
+    console.log(d.toISOString());
+    console.log(d.toLocaleString("en-US"));
+    console.log(JSON.stringify({
+      myDate: d
+    }));
+  </script>
 </body>
 
 </html>
