played with the bootstrap in html

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
   <div class="jumbotron jumbotron-fluid head">
     <h1 class="display-4 text-center">Work Day Planner</h1>
     <p class="lead text-center">A simple calendar app for scheduling your work day</p>
-    <button class="btn btn-warning" style="margin-bottom:1em" id="clearBtn">Clear</button>
-    <p class="date">April 4, 2023</p>
-    <p class="time">12:06:42 AM</p>
+    <h2 class="display-2 text-right btn btn-warning" style="margin-bottom:0m" id="clearBtn">Clear</header>
+    <h3 class="date">April 4, 2023</h3>
+    <h4 class="time">12:06:42 AM</h4>
   </div>
 
 
