--- a/index.html
+++ b/index.html
@@ -20,8 +20,53 @@
     <h1 class="display-4 text-center">Work Day Planner</h1>
     <p class="lead text-center">A simple calendar app for scheduling your work day</p>
     <h2 class="display-2 text-right btn btn-warning" style="margin-bottom:0m" id="clearBtn">Clear</header>
-    <h3 class="date">April 4, 2023</h3>
-    <h4 class="time">12:06:42 AM</h4>
+  </div>
+  
+  <div id="clock" class="design-clock"></div>
+  <div id="clock"></div>
+  <script>
+    window.days = ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday'];
+    window.months = ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October',
+      'November', 'December'
+    ];
+
+    function nthFormatter(d) {
+      if (d > 3 && d < 21) return 'th';
+      switch (d % 10) {
+        case 1:
+          return "st";
+        case 2:
+          return "nd";
+        case 3:
+          return "rd";
+        default:
+          return "th";
+      }
+    }
+
+    function currentTime() {
+      var date = new Date();
+      var hour = date.getHours();
+      var min = date.getMinutes();
+      if (min < 10)
+        min = "0" + min;
+      var sec = date.getSeconds();
+      if (sec < 10)
+        sec = "0" + sec;
+      var ampm = hour >= 12 ? 'pm' : 'am';
+      var dayOfWeek = window.days[date.getDay()];
+      var month = window.months[date.getMonth()];
+      var day = date.getDate();
+      day += nthFormatter(day);
+      document.getElementById("clock").innerText = dayOfWeek + ' ' + day + ' ' + month + ', ' + hour + ':' + min + ':' +
+        sec + ampm;
+      var t = setTimeout(function () {
+        currentTime()
+      }, 1000);
+    }
+
+    currentTime();
+  </script>
   </div>
 
 
