--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
   <link rel="stylesheet" href="./assets/css/style.css">
   <title>Work Day Scheduler</title>
+  <script src="https://code.jquery.com/jquery-3.6.3.js"></script>
+  </script>
 </head>
 
 <body>
@@ -20,8 +22,9 @@
     <h1 class="display-4 text-center">Work Day Planner</h1>
     <p class="lead text-center">A simple calendar app for scheduling your work day</p>
     <h2 class="display-2 text-right btn btn-warning" style="margin-bottom:0m" id="clearBtn">Clear</header>
+
   </div>
-  
+
   <div id="clock" class="design-clock"></div>
   <div id="clock"></div>
   <script>
@@ -69,8 +72,117 @@
   </script>
   </div>
 
+  <body>
 
-  <div class="container main">
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="assets/js/script.js"></script>
+
+
+  </body>
+  <div class="container">
+    <!-- Timeblocks go here -->
+    <div class="time-block" id="0">
+      <div class="row no-gutters input-group">
+        <div class="col-sm col-lg-1 input-group-prepend hour justify-content-sm-end pr-3 pt-3">9 AM</div><textarea
+          class="form-control past"></textarea>
+        <div class="col-sm col-lg-1 input-group-append"><button class="saveBtn btn-block" type="submit"><i
+              class="fas fa-save"></i></button></div>
+      </div>
+    </div>
+    <div class="time-block" id="1">
+      <div class="row no-gutters input-group">
+        <div class="col-sm col-lg-1 input-group-prepend hour justify-content-sm-end pr-3 pt-3">10 AM</div><textarea
+          class="form-control past"></textarea>
+        <div class="col-sm col-lg-1 input-group-append"><button class="saveBtn btn-block" type="submit"><i
+              class="fas fa-save"></i></button></div>
+      </div>
+    </div>
+    <div class="time-block" id="2">
+      <div class="row no-gutters input-group">
+        <div class="col-sm col-lg-1 input-group-prepend hour justify-content-sm-end pr-3 pt-3">11 AM</div><textarea
+          class="form-control past"></textarea>
+        <div class="col-sm col-lg-1 input-group-append"><button class="saveBtn btn-block" type="submit"><i
+              class="fas fa-save"></i></button></div>
+      </div>
+    </div>
+    <div class="time-block" id="2">
+      <div class="row no-gutters input-group">
+        <div class="col-sm col-lg-1 input-group-prepend hour justify-content-sm-end pr-3 pt-3">11 AM</div><textarea
+          class="form-control past"></textarea>
+        <div class="col-sm col-lg-1 input-group-append"><button class="saveBtn btn-block" type="submit"><i
+              class="fas fa-save"></i></button></div>
+      </div>
+    </div>
+    <div class="time-block" id="3">
+      <div class="row no-gutters input-group">
+        <div class="col-sm col-lg-1 input-group-prepend hour justify-content-sm-end pr-3 pt-3">12 PM</div><textarea
+          class="form-control past"></textarea>
+        <div class="col-sm col-lg-1 input-group-append"><button class="saveBtn btn-block" type="submit"><i
+              class="fas fa-save"></i></button></div>
+      </div>
+    </div>
+    <div class="time-block" id="4">
+      <div class="row no-gutters input-group">
+        <div class="col-sm col-lg-1 input-group-prepend hour justify-content-sm-end pr-3 pt-3">1 PM</div><textarea
+          class="form-control past"></textarea>
+        <div class="col-sm col-lg-1 input-group-append"><button class="saveBtn btn-block" type="submit"><i
+              class="fas fa-save"></i></button></div>
+      </div>
+    </div>
+    <div class="time-block" id="5">
+      <div class="row no-gutters input-group">
+        <div class="col-sm col-lg-1 input-group-prepend hour justify-content-sm-end pr-3 pt-3">2 PM</div><textarea
+          class="form-control past"></textarea>
+        <div class="col-sm col-lg-1 input-group-append"><button class="saveBtn btn-block" type="submit"><i
+              class="fas fa-save"></i></button></div>
+      </div>
+    </div>
+    <div class="time-block" id="6">
+      <div class="row no-gutters input-group">
+        <div class="col-sm col-lg-1 input-group-prepend hour justify-content-sm-end pr-3 pt-3">3 PM</div><textarea
+          class="form-control past"></textarea>
+        <div class="col-sm col-lg-1 input-group-append"><button class="saveBtn btn-block" type="submit"><i
+              class="fas fa-save"></i></button></div>
+      </div>
+    </div>
+    <div class="time-block" id="7">
+      <div class="row no-gutters input-group">
+        <div class="col-sm col-lg-1 input-group-prepend hour justify-content-sm-end pr-3 pt-3">4 PM</div><textarea
+          class="form-control past"></textarea>
+        <div class="col-sm col-lg-1 input-group-append"><button class="saveBtn btn-block" type="submit"><i
+              class="fas fa-save"></i></button></div>
+      </div>
+    </div>
+    <div class="time-block" id="8">
+      <div class="row no-gutters input-group">
+        <div class="col-sm col-lg-1 input-group-prepend hour justify-content-sm-end pr-3 pt-3">5 PM</div><textarea
+          class="form-control past"></textarea>
+        <div class="col-sm col-lg-1 input-group-append"><button class="saveBtn btn-block" type="submit"><i
+              class="fas fa-save"></i></button></div>
+      </div>
+    </div>
+    <div class="time-block" id="8">
+      <div class="row no-gutters input-group">
+        <div class="col-sm col-lg-1 input-group-prepend hour justify-content-sm-end pr-3 pt-3">5 PM</div><textarea
+          class="form-control past"></textarea>
+        <div class="col-sm col-lg-1 input-group-append"><button class="saveBtn btn-block" type="submit"><i
+              class="fas fa-save"></i></button></div>
+      </div>
+    </div>
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+  <!-- <div class="container main">
 
     <div class="row time-block">
       <div class="hour col-xs-2 col-sm-2 col-md-2 col-lg-2">
@@ -153,8 +265,19 @@
       </div>
     </div>
 
-  </div>
+  </div> -->
 
+  <!-- <div class="time-block" id="2">
+    <div class="row no-gutters input-group">
+      <div class="col-sm col-lg-1 input-group-prepend hour justify-content-sm-end pr-3 pt-3">11 AM</div>
+      <textarea class="form-control past">
+      </textarea><div class="col-sm col-lg-1 input-group-append">
+        <button class="saveBtn btn-block" type="submit">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+    </div>
+  </div> -->
 
   <!-- <!-- Use class for "past", "present", and "future" to apply styles to the
         time-block divs accordingly. The javascript will need to do this by
