--- a/index.html
+++ b/index.html
@@ -37,16 +37,14 @@
   </button>
 </div>
 
-
-
-      <div id="hour-9" data-hour="8" class="row time-block">
-        <div class="col-1 hour">
-          8AM
-        </div>
-        <textarea id="8AM" class="col-md-10 description">
-    </textarea>
-        <button class="col-1 saveBtn btn"><i class="fas fa-save"></i></button>
-      </div>
+<!-- copied and pasted the row structure above and made changes. I will continues till I get to hour-17/5pm  -->
+<div id="hour-10" class="row time-block mb-2" data-hour="10">
+  <div class="col-2 col-md-1 hour text-center py-3">10AM</div>
+  <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+  <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+    <i class="fas fa-save" aria-hidden="true"></i>
+  </button>
+</div>
 
       <div id="hour-2" data-hour="9" class="row time-block">
         <div class="col-md-1 hour">
