changed and adjusted all of the row time-blocks

--- a/index.html
+++ b/index.html
@@ -27,114 +27,90 @@
     <div class="row time-block">
       <div class="textarea"></div>
 
-<!-- tested and realized I needed to change up the row time-blocks in bootstrap and id's, last attempt didn't work. -->
+      <!-- tested and realized I needed to change up the row time-blocks in bootstrap and id's, last attempt didn't work. -->
 
-<div id="hour-9" class="row time-block mb-2" data-hour="9">
-  <div class="col-2 col-md-1 hour text-center py-3"> <span>9AM</span></div>
-  <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-  <button class="btn saveBtn col-2 col-md-1" aria-label="save">
-    <i class="fas fa-save" aria-hidden="true"></i>
-  </button>
-</div>
-
-<!-- copied and pasted the row structure above and made changes. I will continues till I get to hour-17/5pm  -->
-<div id="hour-10" class="row time-block mb-2" data-hour="10">
-  <div class="col-2 col-md-1 hour text-center py-3">10AM</div>
-  <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
-  <button class="btn saveBtn col-2 col-md-1" aria-label="save">
-    <i class="fas fa-save" aria-hidden="true"></i>
-  </button>
-</div>
-
-      <div id="hour-2" data-hour="9" class="row time-block">
-        <div class="col-md-1 hour">
-          9AM
-        </div>
-        <textarea id="9AM" class="col-md-10 description">
-    </textarea>
-        <button class="col-1 saveBtn btn"><i class="fas fa-save"></i></button>
+      <div id="hour-9" class="row time-block mb-2" data-hour="9">
+        <div class="col-2 col-md-1 hour text-center py-3"> <span>9AM</span></div>
+        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+          <i class="fas fa-save" aria-hidden="true"></i>
+        </button>
       </div>
 
-      <div id="hour-3" data-hour="10" class="row time-block">
-        <div class="col-md-1 hour">
-          10AM
-        </div>
-        <textarea id="10AM" class="col-md-10 description">
-    </textarea>
-        <button class="col-1 saveBtn btn"><i class="fas fa-save"></i></button>
+      <!-- copied and pasted the row structure above and made changes. I will continues till I get to hour-17/5pm  -->
+      <div id="hour-10" class="row time-block mb-2" data-hour="10">
+        <div class="col-2 col-md-1 hour text-center py-3">10AM</div>
+        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+          <i class="fas fa-save" aria-hidden="true"></i>
+        </button>
       </div>
 
-      <div id="hour-4" data-hour="11" class="row time-block">
-        <div class="col-md-1 hour">
-          11AM
-        </div>
-        <textarea id="11AM" class="col-md-10 description">
-    </textarea>
-        <button class="col-1 saveBtn btn"><i class="fas fa-save"></i></button>
+
+      <div id="hour-11" class="row time-block mb-2" data-hour="11">
+        <div class="col-2 col-md-1 hour text-center py-3">11AM</div>
+        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+          <i class="fas fa-save" aria-hidden="true"></i>
+        </button>
       </div>
 
-      <div id="hour-5" data-hour="12" class="row time-block">
-        <div class="col-md-1 hour">
-          12PM
-        </div>
-        <textarea id="12PM" class="col-md-10 description">
-    </textarea>
-        <button class="col-1 saveBtn btn"><i class="fas fa-save"></i></button>
+      <div id="hour-12" class="row time-block mb-2" data-hour="12">
+        <div class="col-2 col-md-1 hour text-center py-3">12pm</div>
+        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+          <i class="fas fa-save" aria-hidden="true"></i>
+        </button>
       </div>
 
-      <div id="hour-6" data-hour="13" class="row time-block">
-        <div class="col-md-1 hour">
-          1PM
-        </div>
-        <textarea id="1PM" class="col-md-10 description">
-    </textarea>
-        <button class="col-1 saveBtn btn"><i class="fas fa-save"></i></button>
+      <div id="hour-13" class="row time-block mb-2" data-hour="13">
+        <div class="col-2 col-md-1 hour text-center py-3">1pm</div>
+        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+          <i class="fas fa-save" aria-hidden="true"></i>
+        </button>
       </div>
 
-      <div id="hour-7" data-hour="14" class="row time-block">
-        <div class="col-md-1 hour">
-          2PM
-        </div>
-        <textarea id="2PM" class="col-md-10 description">
-    </textarea>
-        <button class="col-1 saveBtn btn"><i class="fas fa-save"></i></button>
+      <div id="hour-14" class="row time-block mb-2" data-hour="14">
+        <div class="col-2 col-md-1 hour text-center py-3">2pm</div>
+        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+          <i class="fas fa-save" aria-hidden="true"></i>
+        </button>
       </div>
 
-      <div id="hour-8" data-hour="15" class="row time-block">
-        <div class="col-md-1 hour">
-          3PM
-        </div>
-        <textarea id="3PM" class="col-md-10 description">
-    </textarea>
-        <button class="col-1 saveBtn btn"><i class="fas fa-save"></i></button>
+      <div id="hour-15" class="row time-block mb-2" data-hour="15">
+        <div class="col-2 col-md-1 hour text-center py-3">3pm</div>
+        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+          <i class="fas fa-save" aria-hidden="true"></i>
+        </button>
       </div>
 
-      <div id="hour-9" data-hour="16" class="row time-block">
-        <div class="col-md-1 hour">
-          4PM
-        </div>
-        <textarea id="4PM" class="col-md-10 description">
-    </textarea>
-        <button class="col-1 saveBtn btn"><i class="fas fa-save"></i></button>
+      <div id="hour-16" class="row time-block mb-2" data-hour="16">
+        <div class="col-2 col-md-1 hour text-center py-3">4pm</div>
+        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+          <i class="fas fa-save" aria-hidden="true"></i>
+        </button>
       </div>
 
-      <div id="hour-10" data-hour="17" class="row time-block">
-        <div class="col-md-1 hour">
-          5PM
-        </div>
-        <textarea id="5PM" class="col-md-10 description">
-    </textarea>
-        <button class="col-1 saveBtn btn"><i class="fas fa-save"></i></button>
+      <div id="hour-17" class="row time-block mb-5" data-hour="17">
+        <div class="col-2 col-md-1 hour text-center py-3">5pm</div>
+        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+          <i class="fas fa-save" aria-hidden="true"></i>
+        </button>
       </div>
+    </div>
 
-      <div>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
-          integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
+    <!-- changed and adjusted all of the row time-blocks-->
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
+      integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
 
-
-        <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
