fixed my css styles on padding and borders

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
       <!-- tested and realized I needed to change up the row time-blocks in bootstrap and id's, last attempt didn't work. -->
 
-      <div id="hour-9" class="row time-block mb-2" data-hour="9">
+      <div id="hour-9" class="row time-block mb-4" data-hour="9">
         <div class="col-2 col-md-1 hour text-center py-3"> <span>9AM</span></div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -38,7 +38,7 @@
       </div>
 
       <!-- copied and pasted the row structure above and made changes. I will continues till I get to hour-17/5pm  -->
-      <div id="hour-10" class="row time-block mb-2" data-hour="10">
+      <div id="hour-10" class="row time-block mb-4" data-hour="10">
         <div class="col-2 col-md-1 hour text-center py-3">10AM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -47,7 +47,7 @@
       </div>
 
 
-      <div id="hour-11" class="row time-block mb-2" data-hour="11">
+      <div id="hour-11" class="row time-block mb-4" data-hour="11">
         <div class="col-2 col-md-1 hour text-center py-3">11AM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -55,7 +55,7 @@
         </button>
       </div>
 
-      <div id="hour-12" class="row time-block mb-2" data-hour="12">
+      <div id="hour-12" class="row time-block mb-4" data-hour="12">
         <div class="col-2 col-md-1 hour text-center py-3">12pm</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -63,7 +63,7 @@
         </button>
       </div>
 
-      <div id="hour-13" class="row time-block mb-2" data-hour="13">
+      <div id="hour-13" class="row time-block mb-4" data-hour="13">
         <div class="col-2 col-md-1 hour text-center py-3">1pm</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -71,7 +71,7 @@
         </button>
       </div>
 
-      <div id="hour-14" class="row time-block mb-2" data-hour="14">
+      <div id="hour-14" class="row time-block mb-4" data-hour="14">
         <div class="col-2 col-md-1 hour text-center py-3">2pm</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -79,7 +79,7 @@
         </button>
       </div>
 
-      <div id="hour-15" class="row time-block mb-2" data-hour="15">
+      <div id="hour-15" class="row time-block mb-4" data-hour="15">
         <div class="col-2 col-md-1 hour text-center py-3">3pm</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -87,7 +87,7 @@
         </button>
       </div>
 
-      <div id="hour-16" class="row time-block mb-2" data-hour="16">
+      <div id="hour-16" class="row time-block mb-4" data-hour="16">
         <div class="col-2 col-md-1 hour text-center py-3">4pm</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -95,7 +95,7 @@
         </button>
       </div>
 
-      <div id="hour-17" class="row time-block mb-5" data-hour="17">
+      <div id="hour-17" class="row time-block mb-4" data-hour="17">
         <div class="col-2 col-md-1 hour text-center py-3">5pm</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -110,7 +110,8 @@
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
       integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
 
-    <script src="script.js"></script>
+    
+    <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
