forgot to change sm back to md on line 44 and 42

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
       <!-- copied and pasted the row structure above and made changes. I will continues till I get to hour-17/5pm  -->
       <div id="hour-10" class="row time-block mb-4" data-hour="10">
         <div class="col-2 col-md-1 hour text-center py-3">10AM</div>
-        <textarea class="col-8 col-sm-10 description" rows="3"> </textarea>
-        <button class="btn saveBtn col-2 col-sm-1" aria-label="save">
+        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
